gcp/scripts/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: test
    app.kubernetes.io/name: grafana
  ports:
    - name: app-grafana
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: reaper-nodeport
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  type: NodePort
  selector:
    app.kubernetes.io/managed-by: reaper-operator
    reaper.cassandra-reaper.io/reaper: test-reaper
  ports:
    - name: app 
      port: 8080
      protocol: TCP
      targetPort: 8080
